--- a/prjAdoDotNetDemo/prjAdoDotNetDemo.csproj
+++ b/prjAdoDotNetDemo/prjAdoDotNetDemo.csproj
@@ -58,6 +58,12 @@
     <Compile Include="FrmCustomerEditor.Designer.cs">
       <DependentUpon>FrmCustomerEditor.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmLogin.Designer.cs">
+      <DependentUpon>FrmLogin.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmMDI.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,6 +96,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmCustomerEditor.resx">
       <DependentUpon>FrmCustomerEditor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmLogin.resx">
+      <DependentUpon>FrmLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMDI.resx">
       <DependentUpon>FrmMDI.cs</DependentUpon>
